kustomize/frolf-bot-pwa/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frolf-bot-pwa
spec:
  selector:
    app: frolf-bot-pwa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
